--- a/.env
+++ b/.env
@@ -9,11 +9,19 @@ LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=sqlsrv
-DB_HOST=AMST-DEVS-01
+DB_HOST=AMST-DEVS-01\DEVS
 DB_PORT=1433
 DB_DATABASE=DBCATBWEB
 DB_USERNAME=weblog
 DB_PASSWORD=2d74a8fb6d11bdf8
+
+;SQL_SERVER = AMST-ITDC-01
+SQL_SERVER = AMST-DEVS-01\DEVS
+: SQL_SERVER = PM-DB-01\GMST
+SQL_DATABASE = DBTTRIBWEB
+SQL_USER = weblog
+;SQL_PWD = systemsti
+SQL_PWD = 2d74a8fb6d11bdf8
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
