--- a/.env
+++ b/.env
@@ -15,13 +15,12 @@ DB_DATABASE=DBCATBWEB
 DB_USERNAME=weblog
 DB_PASSWORD=2d74a8fb6d11bdf8
 
-;SQL_SERVER = AMST-ITDC-01
-SQL_SERVER = AMST-DEVS-01\DEVS
-: SQL_SERVER = PM-DB-01\GMST
-SQL_DATABASE = DBTTRIBWEB
-SQL_USER = weblog
-;SQL_PWD = systemsti
-SQL_PWD = 2d74a8fb6d11bdf8
+#DB_CONNECTION=mysql
+#DB_HOST=127.0.0.1
+#DB_PORT=3306
+#DB_DATABASE=amst-catalogo-linea
+#DB_USERNAME=root
+#DB_PASSWORD=
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
