--- a/.env
+++ b/.env
@@ -8,19 +8,19 @@ LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
-#DB_CONNECTION=sqlsrv
-#DB_HOST=AMST-DEVS-01\DEVS
-#DB_PORT=1433
-#DB_DATABASE=DBCATBWEB
-#DB_USERNAME=weblog
-#DB_PASSWORD=2d74a8fb6d11bdf8
+DB_CONNECTION=sqlsrv
+DB_HOST=AMST-DEVS-01\DEVS
+DB_PORT=1433
+DB_DATABASE=DBCATBWEB
+DB_USERNAME=weblog
+DB_PASSWORD=2d74a8fb6d11bdf8
 
-DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
-DB_PORT=3306
-DB_DATABASE=amst-catalogo-linea
-DB_USERNAME=root
-DB_PASSWORD=
+#DB_CONNECTION=mysql
+#DB_HOST=127.0.0.1
+#DB_PORT=3306
+#DB_DATABASE=amst-catalogo-linea
+#DB_USERNAME=root
+#DB_PASSWORD=
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
