--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
-APP_NAME=Laravel
+APP_NAME=AMST
 APP_ENV=local
 APP_KEY=base64:XBWrYOY9SWNpUCuCX+WvUBtqUexOrSfjBjVGVZtXdzc=
 APP_DEBUG=true
-APP_URL=http://api-amst-catalogo-linea.test
+APP_URL=http://devapidirectorio.amst.gob.sv
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
@@ -14,13 +14,6 @@ DB_PORT=1433
 DB_DATABASE=DBCATBWEB
 DB_USERNAME=weblog
 DB_PASSWORD=2d74a8fb6d11bdf8
-
-#DB_CONNECTION=mysql
-#DB_HOST=127.0.0.1
-#DB_PORT=3306
-#DB_DATABASE=amst-catalogo-linea
-#DB_USERNAME=root
-#DB_PASSWORD=
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
