--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@ APP_NAME=UBICALOENTECLA
 APP_ENV=production
 APP_KEY=base64:XBWrYOY9SWNpUCuCX+WvUBtqUexOrSfjBjVGVZtXdzc=
 APP_DEBUG=false
-APP_URL=http://api.ubicaloentecla.gob.sv
+APP_URL=http://api.ubicaloentecla.com
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
