--- a/.env
+++ b/.env
@@ -8,19 +8,19 @@ LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
-DB_CONNECTION=sqlsrv
-DB_HOST=AMST-DEVS-01
-DB_PORT=1433
-DB_DATABASE=DBCATBWEB
-DB_USERNAME=weblog
-DB_PASSWORD=2d74a8fb6d11bdf8
-
 #DB_CONNECTION=sqlsrv
-#DB_HOST=PM-DB-01\GMST
+#DB_HOST=AMST-DEVS-01
 #DB_PORT=1433
 #DB_DATABASE=DBCATBWEB
-#DB_USERNAME=ubicatecla
-#DB_PASSWORD=979a28f36abc39fd4d691acca5ea71b3
+#DB_USERNAME=weblog
+#DB_PASSWORD=2d74a8fb6d11bdf8
+
+DB_CONNECTION=sqlsrv
+DB_HOST=PM-DB-01\GMST
+DB_PORT=1433
+DB_DATABASE=DBCATBWEB
+DB_USERNAME=ubicatecla
+DB_PASSWORD=979a28f36abc39fd4d691acca5ea71b3
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
